<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="car" type="edu.clemson.six.assignment4.view.binding.CarBinder"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/edit_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/activity_edit_car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.six.assignment4.edu.jameshollowell.assignment4.view.EditCarActivity">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:checked="@={car.editable}"
                android:onClick="switchClick"
                android:text="@string/edit_mode"/>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/switchMode"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="16dp">-->

                    <!--<android.support.design.widget.TextInputEditText-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:clickable="@{car.editable}"-->
                    <!--android:cursorVisible="@{car.editable}"-->
                    <!--android:ems="10"-->
                    <!--android:focusable="@{car.editable}"-->
                    <!--android:focusableInTouchMode="@{car.editable}"-->
                    <!--android:hint="@string/hint_owner"-->
                    <!--android:inputType="textPersonName"-->
                    <!--android:text="@={car.user}"/>-->
                    <!--</android.support.design.widget.TextInputLayout>-->

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextMake"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="@{car.editable}"
                            android:cursorVisible="@{car.editable}"
                            android:ems="10"
                            android:focusable="@{car.editable}"
                            android:focusableInTouchMode="@{car.editable}"
                            android:hint="@string/hint_make"
                            android:inputType="textCapWords"
                            android:text="@={car.make}"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextModel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="@{car.editable}"
                            android:cursorVisible="@{car.editable}"
                            android:ems="10"
                            android:focusable="@{car.editable}"
                            android:focusableInTouchMode="@{car.editable}"
                            android:hint="@string/hint_model"
                            android:inputType="textCapWords"
                            android:text="@={car.model}"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextLicense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="@{car.editable}"
                            android:cursorVisible="@{car.editable}"
                            android:ems="10"
                            android:focusable="@{car.editable}"
                            android:focusableInTouchMode="@{car.editable}"
                            android:hint="@string/hint_license"
                            android:inputType="textCapCharacters"
                            android:text="@={car.license}"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="@{car.editable}"
                            android:cursorVisible="@{car.editable}"
                            android:ems="10"
                            android:focusable="@{car.editable}"
                            android:focusableInTouchMode="@{car.editable}"
                            android:hint="@string/hint_state"
                            android:inputType="textCapCharacters"
                            android:maxLength="2"
                            android:text="@={car.state}"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="@{car.editable}"
                            android:cursorVisible="@{car.editable}"
                            android:ems="10"
                            android:focusable="@{car.editable}"
                            android:focusableInTouchMode="@{car.editable}"
                            android:hint="@string/hint_year"
                            android:inputType="number"
                            android:maxLength="4"
                            android:text="@={car.year}"/>
                    </android.support.design.widget.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginStart="2dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/hint_color"/>

                        <edu.clemson.six.assignment4.view.component.BorderedColorView
                            android:id="@+id/colorView"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@{car.color}"
                            android:onClick="colorClick"
                            app:borderColor="@color/colorBorder"
                            app:borderWidth="3dp"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="saveClick"
                    android:text="@string/btn_save"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="cancelClick"
                    android:text="@string/btn_cancel"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>